@@ -7975,23 +7975,27 @@ The resulting factorization matrix only contains the factors found. No other
 assumptions can be made on the remaining factors.
 
 \fun{GEN}{Z_factor_limit}{GEN n, ulong lim} trial divide $n$ by all primes $p
-< \kbd{lim}$ in the precomputed list of prime numbers and return the
-corresponding factorization matrix. In this case, the last ``prime'' divisor
-in the first column of the factorization matrix may well be a proven
-composite.
+< \kbd{lim}$ in the precomputed list of prime numbers and the \kbd{addprimes}
+prime table. Return the corresponding factorization matrix. The first column
+of the factorization matrix may contain a single composite, which may
+or may not be the last entry in presence of a prime table.
 
 If $\kbd{lim} = 0$, the effect is the same as setting $\kbd{lim} =
 \kbd{maxprime()} + 1$: use all precomputed primes.
 
-\fun{GEN}{Z_factor_limit_strict}{GEN n, ulong all, GEN *pU} as
-\tet{Z_factor_limit}, returning the factorization matrix of the smooth
-part of $n$, without the last possibly composite divisor.
-If \kbd{pU} is not \kbd{NULL}, set it to the cofactor, which is either
-\kbd{NULL} (no cofactor) or a divisor of $n$ whose prime divisors are greater
-that \kbd{all}.
-
 \fun{GEN}{absZ_factor_limit}{GEN n, ulong all} returns
 \kbd{Z\_factor\_limit(absi(n))}.
+
+\fun{GEN}{absZ_factor_limit_strict}{GEN n, ulong all, GEN *pU} analogous to
+\tet{absZ_factor_limit}, with a better interface: trial divide $n$ by all
+primes $p < \kbd{lim}$ in the precomputed list of prime numbers and the
+\kbd{addprimes} prime table. Return the corresponding factorization matrix.
+In this case, a composite cofactor is \emph{not} included.
+
+If \kbd{pU} is not \kbd{NULL}, set it to the cofactor, which is either
+\kbd{NULL} (no cofactor) or $[q,k]$, where $k > 0$, $q$ is a composite
+whose prime divisors are greater than \kbd{all}, not a pure power
+and $q^k$ is the largest power of $q$ dividing $n$.
 
 \fun{GEN}{boundfact}{GEN x, ulong lim} as \tet{Z_factor_limit}, applying to
 \typ{INT} or \typ{FRAC} inputs.
