@@ -3922,7 +3922,6 @@ GEN     smithclean(GEN z);
 GEN     Z_ECM(GEN N, long rounds, long seed, ulong B1);
 GEN     Z_factor(GEN n);
 GEN     Z_factor_limit(GEN n, ulong all);
-GEN     Z_factor_limit_strict(GEN n, ulong all, GEN *pU);
 GEN     Z_factor_until(GEN n, GEN limit);
 long    Z_issmooth(GEN m, ulong lim);
 GEN     Z_issmooth_fact(GEN m, ulong lim);
@@ -3930,6 +3929,7 @@ long    Z_issquarefree(GEN x);
 GEN     Z_pollardbrent(GEN n, long rounds, long seed);
 GEN     absZ_factor(GEN n);
 GEN     absZ_factor_limit(GEN n, ulong all);
+GEN     absZ_factor_limit_strict(GEN n, ulong all, GEN *pU);
 long    bigomega(GEN n);
 long    bigomegau(ulong n);
 GEN     core(GEN n);
