@@ -501,3 +501,8 @@ x^8 - 1852391133887779557197954101589261582189937135300705361732122605016667
 
 \\#2178
 setrand(43);nfdisc(x^12-4*x^11-1948*x^10+23072*x^9+1377243*x^8-28119512*x^7-305497980*x^6+12643497432*x^5-64374713540*x^4-1604497782672*x^3+26693470513376*x^2-159320374579040*x+352544728838416)
+
+\\ addprimes + poldiscfactors issue
+addprimes(100830379193747691689);
+nfdisc(x^7+104*x^6+2540*x^5+264160*x^4+2150524*x^3+223654496*x^2+606920400*x+63119721602)
+
