@@ -112,6 +112,9 @@ BA  87- [pthread] polgalois(deg>7) could crash
     89- Z_issmooth_fact: incorrectly include 1 among prime factors
     90- Rg[MX]_rescale_to_int: result had a large power-of-2 content
 DJ  91- sqrtn(Mod(13,112),6) -> o loop [instead of 'bad input' error]
+    92- addprimes() creates issues with nfdisc [wrong results], because it
+        breaks the assumption that a potential composite in a "bounded
+        factorization" has to come last.
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
@@ -302,7 +305,7 @@ AP  90- [libpari] bnrisprincipalmod, ideallogmod
 HC  94- new GP function polylogmult
     95- new GP function zetamultdual
     96- [libpari] checkbnr_i
-    97- [libpari] Z_factor_limit_strict
+    97- [libpari] absZ_factor_limit_strict
     98- [libpari] Idealstarmod, ZV_snf_gcd, ideallog_units0
 BA  99- [libpari] FqC_FqV_mul
    100- [libpari] gen_sort_shallow, vecvecsmall_sort_shallow
